ubiquity (2.17.1) UNRELEASED; urgency=low

  * Drop ntfsprogs alternative depends.

 -- Dmitrijs Ledkovs <xnox@ubuntu.com>  Wed, 06 Nov 2013 00:52:56 +0000

ubiquity (2.17.0) trusty; urgency=low

  [ Aurélien Gâteau ]
  * Fix going back through skipped steps in kde_ui frontend.

  [ Dmitrijs Ledkovs ]
  * Switch "wireless" and "prepare" steps around (LP: #955232)
  * Don't read proc_cmdline twice (LP: #1213748)
  * Set wallpaper for 'feh' only, for others just assume gsettings schemes
    are correct.
  * Silence progress dots with invalid a11y (LP: #1154345)

  [ Colin Watson ]
  * Automatic update of included source packages: choose-mirror 2.50ubuntu1,
    debian-installer-utils 1.100ubuntu1, netcfg 1.111ubuntu1,
    partman-auto-lvm 51ubuntu1, partman-crypto 63ubuntu1, preseed
    1.62ubuntu1.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 29 Oct 2013 07:46:26 -0700

ubiquity (2.15.26) saucy; urgency=low

  [ Dmitrijs Ledkovs ]
  * Adding custom classes to EventBox somehow kills the install now
    button event. Instead use simple bg styling. (LP: #1240532)

  [ Colin Watson ]
  * Update translations from Launchpad.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 16 Oct 2013 18:30:55 +0100

ubiquity (2.15.25) saucy; urgency=low

  * Remove all cairo styling from partition boxes in automatic
    partitioning, instead use gtk3/css styling. (LP: #947107)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Wed, 16 Oct 2013 09:58:29 +0100

ubiquity (2.15.24) saucy; urgency=low

  [ Colin Watson ]
  * Move oem user removal from upstart & wrapper into
    oem-config-firstboot, after ubiquity-dm finished executing. (LP:
    #1231166) (LP: #1239471)

  [ Dmitrijs Ledkovs ]
  * Kill any remaining oem user process before removing oem user (session
    dbus leaves zombies). (LP: #1231166)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 14 Oct 2013 18:19:27 +0100

ubiquity (2.15.23) saucy; urgency=low
